--- a/client/danh-muc-dau-tu-10-20.html
+++ b/client/danh-muc-dau-tu-10-20.html
@@ -16,12 +16,46 @@
         <div class="head-mb">
             <a href="javascript:;" class="quick-menu"><i class="fal fa-bars"></i></a>
             <div class="profile">
-                        <span class="avatar">
-                            <img src="images/ic-user.svg" alt="">
-                        </span>
+                <span class="avatar">
+                    <img src="images/ic-user.svg" alt="">
+                </span>
                 <div class="info">
                     <div class="name">Anna</div>
                     <p>ID Ví: HD1008</p>
+                </div>
+                <div class="profile-dropdown">
+                    <i class="fal fa-angle-down"></i>
+                </div>
+                <div class="profile-form">
+                    <form action="">
+                        <div class="profile-child">
+                            <h4>Thay đổi ảnh đại diện</h4>
+                            <div class="form-avatar">
+                                <label for="avatar">
+                                    <i for="avatar" class="fa fa-plus-circle"></i>
+                                    <input id="avatar" type="file">
+                                </label>
+                            </div>
+                        </div>
+                        <div class="profile-child">
+                            <h4>Đặt lại mật khẩu</h4>
+                            <div class="form-group">
+                                <label for="">Mật khẩu hiện tại</label>
+                                <input type="password" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="">Mật khẩu mới</label>
+                                <input type="password" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="">Xác nhận mật khẩu mới</label>
+                                <input type="password" class="form-control">
+                            </div>
+                            <div class="form-btn">
+                                <button type="submit">Lưu</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -209,6 +243,40 @@
                         <div class="info">
                             <div class="name">Anna</div>
                             <p>ID Ví: HD1008</p>
+                        </div>
+                        <div class="profile-dropdown">
+                            <i class="fal fa-angle-down"></i>
+                        </div>
+                        <div class="profile-form">
+                            <form action="">
+                                <div class="profile-child">
+                                    <h4>Thay đổi ảnh đại diện</h4>
+                                    <div class="form-avatar">
+                                        <label for="avatar">
+                                            <i for="avatar" class="fa fa-plus-circle"></i>
+                                            <input id="avatar" type="file">
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="profile-child">
+                                    <h4>Đặt lại mật khẩu</h4>
+                                    <div class="form-group">
+                                        <label for="">Mật khẩu hiện tại</label>
+                                        <input type="password" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="">Mật khẩu mới</label>
+                                        <input type="password" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="">Xác nhận mật khẩu mới</label>
+                                        <input type="password" class="form-control">
+                                    </div>
+                                    <div class="form-btn">
+                                        <button type="submit">Lưu</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                     <div class="item wallet">
