--- a/client/danh-muc-dau-tu-10-20.html
+++ b/client/danh-muc-dau-tu-10-20.html
@@ -248,6 +248,15 @@
                             <i class="fal fa-angle-down"></i>
                         </div>
                         <div class="profile-form">
+                            <div class="profile">
+                                <span class="avatar">
+                                    <img src="images/ic-user.svg" alt="">
+                                </span>
+                                <div class="info">
+                                    <div class="name">Anna</div>
+                                    <p>ID Ví: HD1008</p>
+                                </div>
+                            </div>
                             <form action="">
                                 <div class="profile-child">
                                     <h4>Thay đổi ảnh đại diện</h4>
