--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -122,6 +122,7 @@
             background: #fff;
             color: #37adda;
             border-radius: 4px;
+            z-index: 9999;
         }
     </style>
     <button id="downloadPdf">Download</button>
