--- a/client/chung-nhan-lscd.html
+++ b/client/chung-nhan-lscd.html
@@ -16,36 +16,33 @@
         <img class="pdf_vntop-bg" src="images/bg-chung-nhan.png" alt="">
         <div class="pdf_vntop-content">
             <img class="pdf_vntop-content-logo" src="images/logo.png" alt="">
-            <h2 class="pdf_vntop-content-title">CHỨNG NHẬN SỞ HỮU CỔ PHIẾU</h2>
+            <h2 class="pdf_vntop-content-title">CHỨNG NHẬN ĐẦU TƯ</h2>
             <div class="pdf_vntop-content-list">
                 <div class="pdf_vntop-content-item">
                     <p>Nhà đầu tư: </p>
                     <h4>MAI QUYỀN VƯƠNG</h4>
                 </div>
                 <div class="pdf_vntop-content-item">
-                    <p>Mã cố phiếu:</p>
-                    <h4>CCL</h4>
-                </div>
-                <div class="pdf_vntop-content-item">
-                    <p>Ngày phát hành:</p>
-                    <h4>10/08/1995</h4>
-                </div>
-                <div class="pdf_vntop-content-item">
-                    <p>Số tiền:</p>
+                    <p>Số tiền đầu tư:</p>
                     <h4>100.000.000đ</h4>
                 </div>
                 <div class="pdf_vntop-content-item">
-                    <p>Số lượng:</p>
-                    <h4>108 cổ phiếu</h4>
+                    <p>Kỳ hạn:</p>
+                    <h4>12 tháng</h4>
                 </div>
                 <div class="pdf_vntop-content-item">
-                    <p>Giá mua:</p>
-                    <h4>925000</h4>
+                    <p>Lãi suất:</p>
+                    <h4>10.5%/ năm</h4>
+                </div>
+                <div class="pdf_vntop-content-item">
+                    <p>Ngày đáo hạn:</p>
+                    <h4>10/08/2022</h4>
                 </div>
             </div>
             <div class="pdf_vntop-content-text">
-                <p>Giấy chứng nhận sở hữu cổ phiếu này có giá trị xác nhận thông tin trên <br>
-                    là chính xác và hợp pháp tại thời điểm xác nhận.</p>
+                <p>Giấy chứng nhận sở hữu cổ phiếu này có giá trị xác nhận thông tin trên là chính xác
+                 <br> và hợp pháp tại thời điểm xác nhận. </p>
+                    <p>*Ghi chú: Áp dụng lãi suất 2%/năm đối với hợp đồng tất toán trước hạn</p>
             </div>
             <div class="pdf_vntop-content-signature">
                 <img src="images/temp.png" alt="">
@@ -179,7 +176,7 @@
                 }
 
                 // Save the PDF
-                pdf.save('chung-nhan-so-huu-co-phieu.pdf');
+                pdf.save('chung-nhan-dau-tu.pdf');
             }
         });
     }
