--- a/client/chung-nhan-lscd.html
+++ b/client/chung-nhan-lscd.html
@@ -54,8 +54,8 @@
             background: #37adda;
         }
         #pdf_vntop {
-            width: 1000px;
-            height: 708px;
+            width: 980px;
+            height: 694px;
             position: relative;
             font-family: Arial, Helvetica, sans-serif;
             color: #213444;
@@ -67,6 +67,7 @@
             top: 0;
             left: 0;
             width: 100%;
+            height: 100%;
             z-index: 9;
         }
         .pdf_vntop-content {
@@ -145,7 +146,7 @@
             onrendered: function(canvas) {
                 var pdf = new jsPDF('p', 'pt', 'letter');
 
-                var pageHeight = 688;
+                var pageHeight = 694;
                 var pageWidth = 980;
                 for (var i = 0; i <= elementHTML.clientHeight / pageHeight; i++) {
                     var srcImg = canvas;
