--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -57,8 +57,8 @@
             background: #37adda;
         }
         #pdf_vntop {
-            width: 1000px;
-            height: 708px;
+            width: 980px;
+            height: 694px;
             position: relative;
             font-family: Arial, Helvetica, sans-serif;
             color: #213444;
@@ -70,6 +70,7 @@
             top: 0;
             left: 0;
             width: 100%;
+            height: 100%;
             z-index: 9;
         }
         .pdf_vntop-content {
