--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -128,6 +128,11 @@
             border-radius: 4px;
             z-index: 9999;
         }
+        @media (max-width: 500px) {
+            #pdf_vntop {
+                zoom: 0.5;
+            }
+        }
     </style>
     <button id="downloadPdf">Download</button>
     <script src="js/jquery.js" type="text/javascript"></script>
