--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -128,9 +128,14 @@
             border-radius: 4px;
             z-index: 9999;
         }
-        @media (max-width: 500px) {
+        @media (max-width: 768.99px) {
             #pdf_vntop {
                 zoom: 0.5;
+            }
+        }
+        @media (max-width: 500px) {
+            #pdf_vntop {
+                zoom: 0.35;
             }
         }
     </style>
