--- a/client/chung-nhan-lscd.html
+++ b/client/chung-nhan-lscd.html
@@ -125,6 +125,16 @@
             border-radius: 4px;
             z-index: 9999;
         }
+        @media (max-width: 768.99px) {
+            #pdf_vntop {
+                zoom: 0.5;
+            }
+        }
+        @media (max-width: 500px) {
+            #pdf_vntop {
+                zoom: 0.35;
+            }
+        }
     </style>
     <button id="downloadPdf">Download</button>
     <script src="js/jquery.js" type="text/javascript"></script>
