--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -129,12 +129,12 @@
             z-index: 9999;
         }
         @media (max-width: 768.99px) {
-            #pdf_vntop {
+            body {
                 zoom: 0.5;
             }
         }
         @media (max-width: 500px) {
-            #pdf_vntop {
+            body {
                 zoom: 0.35;
             }
         }
