--- a/client/chung-nhan-lscd.html
+++ b/client/chung-nhan-lscd.html
@@ -12,40 +12,42 @@
 </head>
 
 <body>
-    <div id="pdf_vntop">
-        <img class="pdf_vntop-bg" src="images/bg-chung-nhan.png" alt="">
-        <div class="pdf_vntop-content">
-            <img class="pdf_vntop-content-logo" src="images/logo.png" alt="">
-            <h2 class="pdf_vntop-content-title">CHỨNG NHẬN ĐẦU TƯ</h2>
-            <div class="pdf_vntop-content-list">
-                <div class="pdf_vntop-content-item">
-                    <p>Nhà đầu tư: </p>
-                    <h4>MAI QUYỀN VƯƠNG</h4>
+    <div class="pdf_vntop_scroll">
+        <div id="pdf_vntop">
+            <img class="pdf_vntop-bg" src="images/bg-chung-nhan.png" alt="">
+            <div class="pdf_vntop-content">
+                <img class="pdf_vntop-content-logo" src="images/logo.png" alt="">
+                <h2 class="pdf_vntop-content-title">CHỨNG NHẬN ĐẦU TƯ</h2>
+                <div class="pdf_vntop-content-list">
+                    <div class="pdf_vntop-content-item">
+                        <p>Nhà đầu tư: </p>
+                        <h4>MAI QUYỀN VƯƠNG</h4>
+                    </div>
+                    <div class="pdf_vntop-content-item">
+                        <p>Số tiền đầu tư:</p>
+                        <h4>100.000.000đ</h4>
+                    </div>
+                    <div class="pdf_vntop-content-item">
+                        <p>Kỳ hạn:</p>
+                        <h4>12 tháng</h4>
+                    </div>
+                    <div class="pdf_vntop-content-item">
+                        <p>Lãi suất:</p>
+                        <h4>10.5%/ năm</h4>
+                    </div>
+                    <div class="pdf_vntop-content-item">
+                        <p>Ngày đáo hạn:</p>
+                        <h4>10/08/2022</h4>
+                    </div>
                 </div>
-                <div class="pdf_vntop-content-item">
-                    <p>Số tiền đầu tư:</p>
-                    <h4>100.000.000đ</h4>
+                <div class="pdf_vntop-content-text">
+                    <p>Giấy chứng nhận sở hữu cổ phiếu này có giá trị xác nhận thông tin trên là chính xác
+                    <br> và hợp pháp tại thời điểm xác nhận. </p>
+                        <p>*Ghi chú: Áp dụng lãi suất 2%/năm đối với hợp đồng tất toán trước hạn</p>
                 </div>
-                <div class="pdf_vntop-content-item">
-                    <p>Kỳ hạn:</p>
-                    <h4>12 tháng</h4>
+                <div class="pdf_vntop-content-signature">
+                    <img src="images/temp.png" alt="">
                 </div>
-                <div class="pdf_vntop-content-item">
-                    <p>Lãi suất:</p>
-                    <h4>10.5%/ năm</h4>
-                </div>
-                <div class="pdf_vntop-content-item">
-                    <p>Ngày đáo hạn:</p>
-                    <h4>10/08/2022</h4>
-                </div>
-            </div>
-            <div class="pdf_vntop-content-text">
-                <p>Giấy chứng nhận sở hữu cổ phiếu này có giá trị xác nhận thông tin trên là chính xác
-                 <br> và hợp pháp tại thời điểm xác nhận. </p>
-                    <p>*Ghi chú: Áp dụng lãi suất 2%/năm đối với hợp đồng tất toán trước hạn</p>
-            </div>
-            <div class="pdf_vntop-content-signature">
-                <img src="images/temp.png" alt="">
             </div>
         </div>
     </div>
@@ -55,13 +57,8 @@
         }
         
         @media (max-width: 768.99px) {
-            body {
-                zoom: 0.5;
-            }
-        }
-        @media (max-width: 500px) {
-            body {
-                zoom: 0.35;
+            .pdf_vntop_scroll {
+                overflow-x: scroll;
             }
         }
     </style>
