--- a/client/chung-nhan-lscd.html
+++ b/client/chung-nhan-lscd.html
@@ -58,7 +58,12 @@
         
         @media (max-width: 768.99px) {
             .pdf_vntop_scroll {
-                overflow-x: scroll;
+                zoom: 0.5;
+            }
+        }
+        @media (max-width: 500px) {
+            .pdf_vntop_scroll {
+                zoom: 0.35;
             }
         }
     </style>
