--- a/client/chung-nhan-lscd.html
+++ b/client/chung-nhan-lscd.html
@@ -3,7 +3,7 @@
 <head>
     <title>Chứng nhận vntop</title>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" name="viewport">
     <meta content="" name="description">
     <meta content="" name="author">
     <link href="css/bootstrap.min.css" rel="stylesheet">
