--- a/client/chung-nhan-lscd.html
+++ b/client/chung-nhan-lscd.html
@@ -59,11 +59,13 @@
         @media (max-width: 768.99px) {
             .pdf_vntop_scroll {
                 zoom: 0.5;
+                touch-action: pan-x pan-y;
             }
         }
         @media (max-width: 500px) {
             .pdf_vntop_scroll {
                 zoom: 0.35;
+                touch-action: pan-x pan-y;
             }
         }
     </style>
