--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -58,11 +58,11 @@
         body {
             background: #37adda;
         }
-        @media (max-width: 768.99px) {
+        /* @media (max-width: 768.99px) {
             .pdf_vntop_scroll {
                 overflow-x: scroll;
             }
-        }
+        } */
     </style>
     <button id="downloadPdf">Download</button>
     <script src="js/jquery.js" type="text/javascript"></script>
