--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -13,11 +13,9 @@
 
 <body>
     <div class="pdf_vntop_scroll">
-        <div id="pdf_vntop">
-            <img class="pdf_vntop-bg" src="images/bg-chung-nhan.png" alt="">
+        <div id="pdf_vntop" style="background: url(images/vntop-bg-chung-nhan.png) no-repeat center;background-size: cover;">
+            <!-- <img class="pdf_vntop-bg" src="images/bg-chung-nhan.png" alt=""> -->
             <div class="pdf_vntop-content">
-                <img class="pdf_vntop-content-logo" src="images/logo.png" alt="">
-                <h2 class="pdf_vntop-content-title">CHỨNG NHẬN SỞ HỮU CỔ PHIẾU</h2>
                 <div class="pdf_vntop-content-list">
                     <div class="pdf_vntop-content-item">
                         <p>Nhà đầu tư: </p>
@@ -44,19 +42,34 @@
                         <h4>925000</h4>
                     </div>
                 </div>
-                <div class="pdf_vntop-content-text">
-                    <p>Giấy chứng nhận sở hữu cổ phiếu này có giá trị xác nhận thông tin trên <br>
-                        là chính xác và hợp pháp tại thời điểm xác nhận.</p>
-                </div>
-                <div class="pdf_vntop-content-signature">
-                    <img src="images/temp.png" alt="">
-                </div>
             </div>
+        </div>
+        <div id="box-img-out" style="">
+            <div id="img-out"></div>
         </div>
     </div>
     <style>
         body {
             background: #37adda;
+        }
+        .pdf_vntop_scroll {
+            position: relative;
+            /* position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%); */
+        }
+        .pdf_vntop_scroll #box-img-out {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            z-index: 99999;
+        }
+        .pdf_vntop_scroll #box-img-out #img-out {
+            margin: auto;
         }
         /* @media (max-width: 768.99px) {
             .pdf_vntop_scroll {
@@ -70,55 +83,27 @@
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
     <script src="js/html2canvas.min.js"></script>
-    <!-- jsPDF library -->
     <script src="js/jspdf.min.js"></script>
     <script>
-        $("#downloadPdf").click(function() {
-            Convert_HTML_To_PDF();
-        })
-        function Convert_HTML_To_PDF() {
-        var elementHTML = document.getElementById('pdf_vntop');
+        var $btn = document.getElementById('pdf_vntop');
+        addEventListener('load', onScreenShotClick);
+        function onScreenShotClick(ev){
+          html2canvas(document.querySelector("#pdf_vntop")).then(canvas => {
+            document.getElementById('img-out').appendChild(canvas)
+          });
+        }
 
-        html2canvas(elementHTML, {
-            useCORS: true,
-            onrendered: function(canvas) {
-                var pdf = new jsPDF('p', 'pt', 'letter');
-
-                var pageHeight = 688;
-                var pageWidth = 980;
-                for (var i = 0; i <= elementHTML.clientHeight / pageHeight; i++) {
-                    var srcImg = canvas;
-                    var sX = 0;
-                    var sY = pageHeight * i; // start 1 pageHeight down for every new page
-                    var sWidth = pageWidth;
-                    var sHeight = pageHeight;
-                    var dX = 0;
-                    var dY = 0;
-                    var dWidth = pageWidth;
-                    var dHeight = pageHeight;
-
-                    window.onePageCanvas = document.createElement("canvas");
-                    onePageCanvas.setAttribute('width', pageWidth);
-                    onePageCanvas.setAttribute('height', pageHeight);
-                    var ctx = onePageCanvas.getContext('2d');
-                    ctx.drawImage(srcImg, sX, sY, sWidth, sHeight, dX, dY, dWidth, dHeight);
-
-                    var canvasDataURL = onePageCanvas.toDataURL("image/png", 1.0);
-                    var width = onePageCanvas.width;
-                    var height = onePageCanvas.clientHeight;
-
-                    if (i > 0) // if we're on anything other than the first page, add another page
-                        pdf.addPage(612, 864); // 8.5" x 12" in pts (inches*72)
-
-                    pdf.setPage(i + 1); // now we declare that we're working on that page
-                    pdf.addImage(canvasDataURL, 'PNG', 20, 40, (width * .62), (height * .62)); // add content to the page
-                }
-
-                // Save the PDF
-                pdf.save('chung-nhan-so-huu-co-phieu.pdf');
+        $('#downloadPdf').click(function(){
+            html2canvas($('#pdf_vntop'), 
+            {
+            onrendered: function (canvas) {
+                var a = document.createElement('a');
+                a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+                a.download = 'somefilename.jpg';
+                a.click();
             }
-        });
-    }
-    </script>
+            });
+            });
+      </script>
 </body>
 </html>
