--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -99,7 +99,7 @@
             onrendered: function (canvas) {
                 var a = document.createElement('a');
                 a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
-                a.download = 'somefilename.jpg';
+                a.download = 'download.jpg';
                 a.click();
             }
             });
