--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -50,14 +50,10 @@
     </div>
     <style>
         body {
-            background: #37adda;
+            background: #F3FAFE;
         }
         .pdf_vntop_scroll {
             position: relative;
-            /* position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%); */
         }
         .pdf_vntop_scroll #box-img-out {
             position: absolute;
@@ -71,11 +67,6 @@
         .pdf_vntop_scroll #box-img-out #img-out {
             margin: auto;
         }
-        /* @media (max-width: 768.99px) {
-            .pdf_vntop_scroll {
-                overflow-x: scroll;
-            }
-        } */
     </style>
     <button id="downloadPdf">Download</button>
     <script src="js/jquery.js" type="text/javascript"></script>
@@ -96,14 +87,14 @@
         $('#downloadPdf').click(function(){
             html2canvas($('#pdf_vntop'), 
             {
-            onrendered: function (canvas) {
-                var a = document.createElement('a');
-                a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
-                a.download = 'download.jpg';
-                a.click();
-            }
+                onrendered: function (canvas) {
+                    var a = document.createElement('a');
+                    a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+                    a.download = 'download.jpg';
+                    a.click();
+                }
             });
-            });
+        });
       </script>
 </body>
 </html>
