--- a/client/chung-nhan-lscd.html
+++ b/client/chung-nhan-lscd.html
@@ -13,11 +13,8 @@
 
 <body>
     <div class="pdf_vntop_scroll">
-        <div id="pdf_vntop">
-            <img class="pdf_vntop-bg" src="images/bg-chung-nhan.png" alt="">
+        <div id="pdf_vntop" style="background: url(images/lscd-bg.png) no-repeat center;background-size: cover;">
             <div class="pdf_vntop-content">
-                <img class="pdf_vntop-content-logo" src="images/logo.png" alt="">
-                <h2 class="pdf_vntop-content-title">CHỨNG NHẬN ĐẦU TƯ</h2>
                 <div class="pdf_vntop-content-list">
                     <div class="pdf_vntop-content-item">
                         <p>Nhà đầu tư: </p>
@@ -40,78 +37,39 @@
                         <h4>10/08/2022</h4>
                     </div>
                 </div>
-                <div class="pdf_vntop-content-text">
-                    <p>Giấy chứng nhận sở hữu cổ phiếu này có giá trị xác nhận thông tin trên là chính xác
-                    <br> và hợp pháp tại thời điểm xác nhận. </p>
-                        <p>*Ghi chú: Áp dụng lãi suất 2%/năm đối với hợp đồng tất toán trước hạn</p>
-                </div>
-                <div class="pdf_vntop-content-signature">
-                    <img src="images/temp.png" alt="">
-                </div>
             </div>
         </div>
+        <div id="box-img-out" style="">
+            <div id="img-out"></div>
+        </div>
     </div>
-    <style>
-        body {
-            background: #37adda;
-        }
-        
-    </style>
     <button id="downloadPdf">Download</button>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/popper.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
     <script src="js/html2canvas.min.js"></script>
-    <!-- jsPDF library -->
     <script src="js/jspdf.min.js"></script>
     <script>
-        $("#downloadPdf").click(function() {
-            Convert_HTML_To_PDF();
-        })
-        function Convert_HTML_To_PDF() {
-        var elementHTML = document.getElementById('pdf_vntop');
+        var $btn = document.getElementById('pdf_vntop');
+        addEventListener('load', onScreenShotClick);
+        function onScreenShotClick(ev){
+          html2canvas(document.querySelector("#pdf_vntop")).then(canvas => {
+            document.getElementById('img-out').appendChild(canvas)
+          });
+        }
 
-        html2canvas(elementHTML, {
-            useCORS: true,
-            onrendered: function(canvas) {
-                var pdf = new jsPDF('p', 'pt', 'letter');
-
-                var pageHeight = 694;
-                var pageWidth = 980;
-                for (var i = 0; i <= elementHTML.clientHeight / pageHeight; i++) {
-                    var srcImg = canvas;
-                    var sX = 0;
-                    var sY = pageHeight * i; // start 1 pageHeight down for every new page
-                    var sWidth = pageWidth;
-                    var sHeight = pageHeight;
-                    var dX = 0;
-                    var dY = 0;
-                    var dWidth = pageWidth;
-                    var dHeight = pageHeight;
-
-                    window.onePageCanvas = document.createElement("canvas");
-                    onePageCanvas.setAttribute('width', pageWidth);
-                    onePageCanvas.setAttribute('height', pageHeight);
-                    var ctx = onePageCanvas.getContext('2d');
-                    ctx.drawImage(srcImg, sX, sY, sWidth, sHeight, dX, dY, dWidth, dHeight);
-
-                    var canvasDataURL = onePageCanvas.toDataURL("image/png", 1.0);
-                    var width = onePageCanvas.width;
-                    var height = onePageCanvas.clientHeight;
-
-                    if (i > 0) // if we're on anything other than the first page, add another page
-                        pdf.addPage(612, 864); // 8.5" x 12" in pts (inches*72)
-
-                    pdf.setPage(i + 1); // now we declare that we're working on that page
-                    pdf.addImage(canvasDataURL, 'PNG', 20, 40, (width * .62), (height * .62)); // add content to the page
+        $('#downloadPdf').click(function(){
+            html2canvas($('#pdf_vntop'), 
+            {
+                onrendered: function (canvas) {
+                    var a = document.createElement('a');
+                    a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+                    a.download = 'download.jpg';
+                    a.click();
                 }
-
-                // Save the PDF
-                pdf.save('chung-nhan-dau-tu.pdf');
-            }
+            });
         });
-    }
-    </script>
+      </script>
 </body>
 </html>
