--- a/client/chung-nhan-lscd.html
+++ b/client/chung-nhan-lscd.html
@@ -43,6 +43,11 @@
             <div id="img-out"></div>
         </div>
     </div>
+    <style>
+        body {
+            background: #F3FAFE !important;
+        }
+    </style>
     <button id="downloadPdf">Download</button>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/popper.min.js" type="text/javascript"></script>
