--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -53,12 +53,8 @@
         }
     </style>
     <button id="downloadPdf">Download</button>
-    <script src="js/jquery.js" type="text/javascript"></script>
-    <script src="js/popper.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/script.js" type="text/javascript"></script>
-    <script src="js/html2canvas.min.js"></script>
-    <script src="js/jspdf.min.js"></script>
+    <script type="text/javascript" src="https://84race.com/public/js/jquery.js"></script>
+    <script type="text/javascript" src="https://84race.com/public/js/html2canvas.js"></script>
     <script>
         var $btn = document.getElementById('pdf_vntop');
         addEventListener('load', onScreenShotClick);
