--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -54,7 +54,9 @@
     </style>
     <button id="downloadPdf">Download</button>
     <script type="text/javascript" src="https://84race.com/public/js/jquery.js"></script>
-    <script type="text/javascript" src="https://84race.com/public/js/html2canvas.js"></script>
+    <!-- <script type="text/javascript" src="https://84race.com/public/js/html2canvas.js"></script> -->
+    <script src="js/html2canvas.min.js"></script>
+    <!-- <script type="text/javascript" src="https://84race.com/public/js/jquery.js"></script> -->
     <script>
         var $btn = document.getElementById('pdf_vntop');
         addEventListener('load', onScreenShotClick);
@@ -64,17 +66,17 @@
           });
         }
 
-        $('#downloadPdf').click(function(){
-            html2canvas($('#pdf_vntop'), 
-            {
-                onrendered: function (canvas) {
-                    var a = document.createElement('a');
-                    a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
-                    a.download = 'download.jpg';
-                    a.click();
-                }
-            });
-        });
+        // $('#downloadPdf').click(function(){
+        //     html2canvas($('#pdf_vntop'), 
+        //     {
+        //         onrendered: function (canvas) {
+        //             var a = document.createElement('a');
+        //             a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+        //             a.download = 'download.jpg';
+        //             a.click();
+        //         }
+        //     });
+        // });
       </script>
 </body>
 </html>
