--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -66,17 +66,17 @@
           });
         }
 
-        // $('#downloadPdf').click(function(){
-        //     html2canvas($('#pdf_vntop'), 
-        //     {
-        //         onrendered: function (canvas) {
-        //             var a = document.createElement('a');
-        //             a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
-        //             a.download = 'download.jpg';
-        //             a.click();
-        //         }
-        //     });
-        // });
+        $('#downloadPdf').click(function(){
+            html2canvas($('#pdf_vntop'), 
+            {
+                onrendered: function (canvas) {
+                    var a = document.createElement('a');
+                    a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+                    a.download = 'download.jpg';
+                    a.click();
+                }
+            });
+        });
       </script>
 </body>
 </html>
