--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -6,9 +6,6 @@
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0" name="viewport">
     <meta content="" name="description">
     <meta content="" name="author">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="fonts/fontawesome-pro-5.8.2-web/css/all.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -53,10 +50,8 @@
         }
     </style>
     <button id="downloadPdf">Download</button>
-    <script type="text/javascript" src="https://84race.com/public/js/jquery.js"></script>
-    <!-- <script type="text/javascript" src="https://84race.com/public/js/html2canvas.js"></script> -->
+    <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/html2canvas.min.js"></script>
-    <!-- <script type="text/javascript" src="https://84race.com/public/js/jquery.js"></script> -->
     <script>
         var $btn = document.getElementById('pdf_vntop');
         addEventListener('load', onScreenShotClick);
@@ -65,17 +60,18 @@
             document.getElementById('img-out').appendChild(canvas)
           });
         }
-        $('#downloadPdf').click(function(){
-            html2canvas($('#pdf_vntop'), 
-            {
-                onrendered: function (canvas) {
-                    var a = document.createElement('a');
-                    a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
-                    a.download = 'download.jpg';
-                    a.click();
-                }
-            });
-        });
+
+        // $('#downloadPdf').click(function(){
+        //     html2canvas($('#pdf_vntop'), 
+        //     {
+        //         onrendered: function (canvas) {
+        //             var a = document.createElement('a');
+        //             a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+        //             a.download = 'download.jpg';
+        //             a.click();
+        //         }
+        //     });
+        // });
       </script>
 </body>
 </html>
