--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -6,6 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0" name="viewport">
     <meta content="" name="description">
     <meta content="" name="author">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -52,6 +53,7 @@
     <button id="downloadPdf">Download</button>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/html2canvas.min.js"></script>
+    <script src="js/jspdf.min.js"></script>
     <script>
         var $btn = document.getElementById('pdf_vntop');
         addEventListener('load', onScreenShotClick);
@@ -61,17 +63,17 @@
           });
         }
 
-        // $('#downloadPdf').click(function(){
-        //     html2canvas($('#pdf_vntop'), 
-        //     {
-        //         onrendered: function (canvas) {
-        //             var a = document.createElement('a');
-        //             a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
-        //             a.download = 'download.jpg';
-        //             a.click();
-        //         }
-        //     });
-        // });
+        $('#downloadPdf').click(function(){
+            html2canvas($('#pdf_vntop'), 
+            {
+                onrendered: function (canvas) {
+                    var a = document.createElement('a');
+                    a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+                    a.download = 'download.jpg';
+                    a.click();
+                }
+            });
+        });
       </script>
 </body>
 </html>
