--- a/client/chung-nhan-lscd.html
+++ b/client/chung-nhan-lscd.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Chứng nhận vntop</title>
+    <title>Chứng nhận lscd</title>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" name="viewport">
     <meta content="" name="description">
     <meta content="" name="author">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="fonts/fontawesome-pro-5.8.2-web/css/all.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
 </head>
 
@@ -50,9 +48,6 @@
     </style>
     <button id="downloadPdf">Download</button>
     <script src="js/jquery.js" type="text/javascript"></script>
-    <script src="js/popper.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/script.js" type="text/javascript"></script>
     <script src="js/html2canvas.min.js"></script>
     <script src="js/jspdf.min.js"></script>
     <script>
