--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -47,9 +47,9 @@
         }
     </style>
     <button id="downloadPdf">Download</button>
-    <script src="js/jquery.js" type="text/javascript"></script>
-    <script src="js/html2canvas.min.js"></script>
-    <script src="js/jspdf.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.1.1.js" type="text/javascript"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <!-- <script src="js/jspdf.min.js"></script> -->
     <script>
         var $btn = document.getElementById('pdf_vntop');
         addEventListener('load', onScreenShotClick);
