--- a/client/chung-nhan-lscd.html
+++ b/client/chung-nhan-lscd.html
@@ -3,9 +3,6 @@
 <head>
     <title>Chứng nhận lscd</title>
     <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0" name="viewport">
-    <meta content="" name="description">
-    <meta content="" name="author">
     <link href="css/main.css" rel="stylesheet">
 </head>
 
@@ -47,9 +44,9 @@
         }
     </style>
     <button id="downloadPdf">Download</button>
-    <script src="js/jquery.js" type="text/javascript"></script>
-    <script src="js/html2canvas.min.js"></script>
-    <script src="js/jspdf.min.js"></script>
+    <script src="js/jquery.min.js" type="text/javascript"></script>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <!-- <script src="js/jspdf.min.js"></script> -->
     <script>
         var $btn = document.getElementById('pdf_vntop');
         addEventListener('load', onScreenShotClick);
