--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -47,7 +47,7 @@
         }
     </style>
     <button id="downloadPdf">Download</button>
-    <script src="http://code.jquery.com/jquery-2.1.1.js" type="text/javascript"></script>
+    <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <!-- <script src="js/jspdf.min.js"></script> -->
     <script>
@@ -58,10 +58,8 @@
             document.getElementById('img-out').appendChild(canvas)
           });
         }
-
-
-        $('#downloadPdf').click(function(){
-            html2canvas($('#pdf_vntop'), 
+        document.getElementById("downloadPdf").addEventListener("click", function() {
+            html2canvas(document.getElementById("pdf_vntop"), 
             {
                 onrendered: function (canvas) {
                     var a = document.createElement('a');
@@ -70,7 +68,7 @@
                     a.click();
                 }
             });
-        });
+        })
       </script>
 </body>
 </html>
