--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -48,7 +48,7 @@
     </style>
     <button id="downloadPdf">Download</button>
     <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+    <script src="js/html2canvas.min.js"></script>
     <!-- <script src="js/jspdf.min.js"></script> -->
     <script>
         var $btn = document.getElementById('pdf_vntop');
@@ -59,14 +59,16 @@
           });
         }
         document.getElementById("downloadPdf").addEventListener("click", function() {
+            console.log(1)
             html2canvas(document.getElementById("pdf_vntop"), 
             {
-                onrendered: function (canvas) {
-                    var a = document.createElement('a');
-                    a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
-                    a.download = 'download.jpg';
-                    a.click();
-                }
+				allowTaint: true,
+				useCORS: true
+			}).then(function (canvas) {
+                var a = document.createElement('a');
+                a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+                a.download = 'download.jpg';
+                a.click();
             });
         })
       </script>
