--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -65,10 +65,23 @@
 				allowTaint: true,
 				useCORS: true
 			}).then(function (canvas) {
-                var a = document.createElement('a');
-                a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
-                a.download = 'download.jpg';
+                // var a = document.createElement('a');
+                // a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+                // a.download = 'download.jpg';
+                // a.click();
+                var img = new Image();
+                // console.log(x, bi, img, canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream"))
+                img.crossOrigin = "Anonymous";
+                img.id = "getshot";
+                img.src = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+                document.body.appendChild(img);
+
+                var a = document.createElement("a");
+                a.href = getshot.src;
+                a.download = "download.jpg";
+                a.target = "_blank";
                 a.click();
+                document.body.removeChild(img);
             });
         })
       </script>
