--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -60,6 +60,7 @@
         }
         document.getElementById("downloadPdf").addEventListener("click", function() {
             console.log(1)
+            var getCanvas;
             html2canvas(document.getElementById("pdf_vntop"), 
             {
 				allowTaint: true,
@@ -69,19 +70,40 @@
                 // a.href = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
                 // a.download = 'download.jpg';
                 // a.click();
-                var img = new Image();
+                // var img = new Image();
                 // console.log(x, bi, img, canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream"))
-                img.crossOrigin = "Anonymous";
-                img.id = "getshot";
-                img.src = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
-                document.body.appendChild(img);
+                // img.crossOrigin = "Anonymous";
+                // img.id = "getshot";
+                // img.src = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");
+                // document.body.appendChild(img);
 
-                var a = document.createElement("a");
-                a.href = getshot.src;
-                a.download = "download.jpg";
-                a.target = "_blank";
-                a.click();
-                document.body.removeChild(img);
+                // var a = document.createElement("a");
+                // a.href = getshot.src;
+                // a.download = "download.jpg";
+                // a.target = "_blank";
+                // a.click();
+                // document.body.removeChild(img);
+
+                var dataURL = canvas.toDataURL("image/jpeg").replace("image/jpeg", "image/octet-stream");                              //removing the canvas from the page
+
+                var tempLink = document.createElement('a'), e; 
+                    tempLink.download = 'untitled.png';
+                    if (/(iPad|iPhone|iPod)/g.test(navigator.userAgent)) { //iOS = Iphone, Ipad, etc.
+                        alert("Instructions...");
+                        tempLink.target = "_blank";
+                        tempLink.href = dataURL;
+                    } else {
+                        tempLink.href = dataURL.replace(/^data[:]image\/png[;]/i, "data:application/download;");//force download
+                    }
+
+                if (document.createEvent)                            // create a "fake" click-event to trigger the download
+                {
+                    e = document.createEvent("MouseEvents");
+                    e.initMouseEvent("click", true, true, window, 0, 0, 0, 0, 0, false, false, false, false, 0, null);
+                    tempLink.dispatchEvent(e);
+                } else if (tempLink.fireEvent) {
+                    tempLink.fireEvent("onclick");
+                }
             });
         })
       </script>
