--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -96,7 +96,7 @@
                         tempLink.href = dataURL.replace(/^data[:]image\/png[;]/i, "data:application/download;");//force download
                     }
 
-                if (document.createEvent)                            // create a "fake" click-event to trigger the download
+                if (document.createEvent)                        
                 {
                     e = document.createEvent("MouseEvents");
                     e.initMouseEvent("click", true, true, window, 0, 0, 0, 0, 0, false, false, false, false, 0, null);
