--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -7,7 +7,7 @@
 
 <body>
     <div class="pdf_vntop_scroll">
-        <div id="pdf_vntop" style="background: url(images/vntop-bg-chung-nhan.png) no-repeat center;background-size: cover;">
+        <div id="pdf_vntop" style="background: url(images/vntop-bg-chung-nhan-2.png) no-repeat center;background-size: cover;">
             <div class="pdf_vntop-content">
                 <div class="pdf_vntop-content-list">
                     <div class="pdf_vntop-content-item">
@@ -34,6 +34,10 @@
                         <p>Giá mua:</p>
                         <h4>925000</h4>
                     </div>
+                </div>
+                <div class="pdf_vntop-text">
+                    Giấy chứng nhận sở hữu cổ phiếu này có giá trị xác nhận thông tin trên <br>
+                    là chính xác và hợp pháp tại thời điểm xác nhận.
                 </div>
             </div>
         </div>
