--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -7,8 +7,11 @@
 
 <body>
     <div class="pdf_vntop_scroll">
-        <div id="pdf_vntop" style="background: url(images/vntop-bg-chung-nhan-2.png) no-repeat center;background-size: cover;">
+        <div id="pdf_vntop" style="background: url(images/vntop-bg-chung-nhan-4.png) no-repeat center;background-size: cover;">
             <div class="pdf_vntop-content">
+                <div class="pdf_vntop-content-title">
+                    <h1>CHỨNG NHẬN SỞ HỮU CỔ PHIẾU</h1>
+                </div>
                 <div class="pdf_vntop-content-list">
                     <div class="pdf_vntop-content-item">
                         <p>Nhà đầu tư: </p>
@@ -39,6 +42,9 @@
                     Giấy chứng nhận sở hữu cổ phiếu này có giá trị xác nhận thông tin trên <br>
                     là chính xác và hợp pháp tại thời điểm xác nhận.
                 </div>
+            </div>
+            <div class="pdf_vntop-content-temp">
+                <img src="images/temp.png" alt="">
             </div>
         </div>
         <div id="box-img-out" style="">
