--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -44,12 +44,13 @@
                 </div>
             </div>
             <div class="pdf_vntop-content-temp">
-                <img src="images/temp.png" alt="">
+                <h4>CÔNG TY CỔ PHẦN TKSIC</h4>
+                <img src="images/temp2.png" alt="">
             </div>
         </div>
-        <!-- <div id="box-img-out">
+        <div id="box-img-out">
             <div id="img-out"></div>
-        </div> -->
+        </div>
     </div>
     <style>
         body {
