--- a/client/chung-nhan-vntop.html
+++ b/client/chung-nhan-vntop.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Chứng nhận vntop</title>
+    <title>CHỨNG NHẬN SỞ HỮU CỔ PHIẾU</title>
     <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="pdf_vntop_scroll">
-        <div id="pdf_vntop" style="background: url(images/vntop-bg-chung-nhan-4.png) no-repeat center;background-size: cover;">
+        <div id="pdf_vntop" style="background: url(images/vntop-bg-chung-nhan.png) no-repeat center;background-size: cover;">
             <div class="pdf_vntop-content">
                 <div class="pdf_vntop-content-title">
                     <h1>CHỨNG NHẬN SỞ HỮU CỔ PHIẾU</h1>
