--- a/client/chung-nhan-lscd.html
+++ b/client/chung-nhan-lscd.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Chứng nhận lscd</title>
+    <title>CHỨNG NHẬN ĐẦU TƯ</title>
     <meta charset="UTF-8">
     <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="pdf_vntop_scroll">
-        <div id="pdf_vntop" style="background: url(images/lscd-bg.png) no-repeat center;background-size: cover;">
+        <div id="pdf_vntop" style="background: url(images/vntop-bg-chung-nhan.png) no-repeat center;background-size: cover;">
             <div class="pdf_vntop-content">
+                <div class="pdf_vntop-content-title">
+                    <h1>CHỨNG NHẬN ĐẦU TƯ</h1>
+                </div>
                 <div class="pdf_vntop-content-list">
                     <div class="pdf_vntop-content-item">
                         <p>Nhà đầu tư: </p>
@@ -32,6 +35,15 @@
                         <h4>10/08/2022</h4>
                     </div>
                 </div>
+                <div class="pdf_vntop-text">
+                    <p>Giấy chứng nhận sở hữu cổ phiếu này có giá trị xác nhận thông tin trên là chính xác <br>
+                        và hợp pháp tại thời điểm xác nhận. </p>
+                    <p>*Ghi chú: Áp dụng lãi suất 2%/năm đối với hợp đồng tất toán trước hạn</p>
+                </div>
+            </div>
+            <div class="pdf_vntop-content-temp">
+                <h4>CÔNG TY CỔ PHẦN TKSIC</h4>
+                <img src="images/temp2.png" alt="">
             </div>
         </div>
         <div id="box-img-out" style="">
