--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -31,7 +31,7 @@
                     <a href="#"><img src="imgs/logo-new.png" alt=""></a>
                 </div>
                 <div class="col-10 col-lg-9">
-                    <p>Dẫn lối đầu tư thông minh - Your guide to smart investments</p>
+                    <p>Đầu Tư Và Tích Luỹ Thông Minh - Smart Saving and Investing</p>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
         <section id="partner">
             <div class="container">
                 <div class="partner-title">
-                    <h3>Giải pháp của bạn là</h3>
+                    <h3>Đối tác của TKSIC</h3>
                     <div class="dots_three">
                         <span></span>
                         <span></span>
@@ -150,7 +150,7 @@
         <div id="reason">
             <div class="container">
                 <div class="reason-title">
-                    <h3>Giải pháp của bạn là</h3>
+                    <h3>Lý do chọn TKSIC</h3>
                     <div class="dots_three">
                         <span></span>
                         <span></span>
@@ -205,7 +205,7 @@
                 <div class="product-title">
                     <div class="product-item">
                         <div class="product-title-title">
-                            <h3>Giải pháp của bạn là</h3>
+                            <h3>Sản phẩm của TKSIC</h3>
                             <div class="dots_three">
                                 <span></span>
                                 <span></span>
@@ -236,7 +236,7 @@
                             <td>là kênh tích lũy an toàn,
                                 nơi khách hàng có thể linh hoạt đầu tư về thời gian và vốn, lãi cao hơn ngân hàng</td>
                             <td>Linh hoạt</td>
-                            <td>2 - 10.50%/năm</td>
+                            <td>10.50%/năm</td>
                             <td>1.000.000đ</td>
                             <td>An toàn, <br>lợi suất tốt</td>
                         </tr>
@@ -287,7 +287,7 @@
                         </div>
                         <div class="tr">
                             <div>Linh hoạt</div>
-                            <div>2 - 10.50%/năm</div>
+                            <div>10.50%/năm</div>
                         </div>
                         <div class="tr">
                             <div>VNTOP 10</div>
@@ -389,7 +389,7 @@
         <section id="newspaper">
             <div class="container">
                 <div class="newspaper-title">
-                    <h3>Giải pháp của bạn là</h3>
+                    <h3>Báo chí nói về chúng tôi</h3>
                     <div class="dots_three">
                         <span></span>
                         <span></span>
