--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -386,7 +386,7 @@
                 </div>
             </div>
         </div>
-        <section id="newspaper">
+        <!-- <section id="newspaper">
             <div class="container">
                 <div class="newspaper-title">
                     <h3>Báo chí nói về chúng tôi</h3>
@@ -435,7 +435,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section id="commit">
             <div class="container">
@@ -462,6 +462,7 @@
             <div class="container">
                 <div class="advise-group">
                     <div class="advise-item">
+                        <!-- <iframe id="advise_iframe" src="https://tksic.oncrm.asia/optin-form/b6b4eb19ade44de58af690ffbcad13b0" frameborder="0"></iframe> -->
                         <form action="" class="advise-form">
                             <h4>Đăng Ký Ngay</h4>
                             <p>Cảm ơn sự quan tâm của bạn! Vui lòng điền thông tin bên dưới để đăng ký.</p>
