--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -39,6 +39,7 @@
     <main>
         <section class="hero-sc">
             <img class="banner-pc" src="imgs/banner.png" alt="">
+            <img class="banner-mobile" src="imgs/banner-mobile.jpg" alt="">
         </section>
         <section id="problem">
             <div class="container">
